--- a/index.html
+++ b/index.html
@@ -65,14 +65,32 @@
         </div>
       </div>
       <section class="main-spaceai">
-        <h2>SpaceAI 2023 <span>인공지능 우주를 만나다</span></h2>
+        <div class="wrap">
+        <h2>SpaceAI 2023 <span>인공지능, 우주를 만나다</span></h2>
       <p>SpaceAI는 우주과학기술 분야에 인공지능(Artificial Intelligence, AI)을 적용할 수 있도록 지원하는 프로그램입니다. 프로그램은 과학기술 분야 전문가들을 위한 Scientist 트랙과 일반 시민들도 참여할 수 있는 Citizen Scientist 트랙이 각각 독립적으로 진행됩니다. SpaceAI를 통해 우주에 대한 우리 인류의 이해가 넓혀질 것으로 기대하며, 프로그램을 통해 개발된 여러가지 AI기술 인프라는 제품화하여 향후 다양한 분야에 활용될 수 있도록 지원할 것입니다. SpaceAI 2023에 여러분들의 많은 관심과 참여 부탁드립니다.</p>
+    </div>
     </section>
-      <section class="main-program">
+    <section class="main-program">
+        <div class="wrap">
         <h2>Program<span>프로그램</span></h2>
+        <div class="main-program__tracks">
+            <div>
+                <h4>Scientist 트랙</h4>
+                <p>최신 인공지능 기술을 사용하여 다양한 우주 분야 연구가 수행될 수 있도록 연구 주제 발굴, 전문가들로 이루어진 팀 구성, 다양한 빅데이터와 AI 모델 개발을 위한 플랫폼을 제공하고자 합니다.</p>
+                <a>자세히 보기</a>
+            </div>
+            <div>
+                <h4>Citizen Scientist 트랙</h4>
+                <p>학생/시민들을 대상으로 실제 우주 분야에서 사용되는 AI 모델의 개발 과정을 교육함으로써 앞으로 대한민국 우주시대를 열어갈 인재를 양성하는데 기여하고자 합니다.</p>
+                <a>자세히 보기</a>
+            </div>
+        </div>
+    </div>
       </section>
       <section class="main-schedule">
+        <div class="wrap">
         <h2>Schedule<span>일정</span></h2>
+    </div>
       </section>
       <section class="main-institutes "></section>
     </main>
